<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.dili</groupId>
	<artifactId>trading</artifactId>
	<version>1.0.0-SNAPSHOT</version>
	<description>trading</description>
	<packaging>jar</packaging>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<java.version>1.8</java.version>
		<!-- MyBatis Generator -->
		<!-- Java接口和实体类 -->
		<targetJavaProject>${basedir}/src/main/java</targetJavaProject>
		<targetMapperPackage>com.dili.orders.mapper</targetMapperPackage>
		<targetModelPackage>com.dili.orders.domain</targetModelPackage>
		<targetServicePackage>com.dili.orders.service</targetServicePackage>
		<targetControllerPackage>com.dili.orders.api</targetControllerPackage>
		<templateRootDir>${basedir}/mbg-templates</templateRootDir>
		<!-- XML生成路径 -->
		<targetResourcesProject>${basedir}/src/main/resources</targetResourcesProject>
		<targetXMLPackage>mapper</targetXMLPackage>
	</properties>

	<!-- 父工程定义 -->
	<parent>
		<artifactId>trading-parent</artifactId>
		<groupId>com.dili</groupId>
		<version>1.0.0-SNAPSHOT</version>
	</parent>

	<build>
		<finalName>
            trading
        </finalName>
		<!-- 资源文件过滤 -->
		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>true</filtering>
			</resource>
		</resources>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<!-- 编译JDK版本 -->
				<configuration>
					<source>13</source>
					<target>13</target>
					<encoding>UTF-8</encoding>
					<parameters>true</parameters>
					<!-- <compilerArgument>-proc:none</compilerArgument> -->
					<compilerArgs>
						<arg>--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>
						<arg>--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
						<arg>--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
						<arg>--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
						<arg>--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
					</compilerArgs>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<version>2.3.2.RELEASE</version>
				<executions>
					<execution>
						<goals>
							<goal>repackage</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-resources-plugin</artifactId>
				<version>3.1.0</version>
				<configuration>
					<nonFilteredFileExtensions>
						<nonFilteredFileExtension>xls</nonFilteredFileExtension>
						<nonFilteredFileExtension>xlsx</nonFilteredFileExtension>
					</nonFilteredFileExtensions>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<dependencies>
		<dependency>
			<groupId>com.dili</groupId>
			<artifactId>jmsf-sdk</artifactId>
			<version>1.0.0-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>com.dili</groupId>
			<artifactId>rule-sdk</artifactId>
			<version>0.0.1-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>com.dili</groupId>
			<artifactId>customer-sdk</artifactId>
			<version>1.2.5-SNAPSHOT</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/javax.persistence/persistence-api -->
		<dependency>
			<groupId>javax.persistence</groupId>
			<artifactId>persistence-api</artifactId>
			<version>1.0</version>
		</dependency>
		<dependency>
			<groupId>com.dili</groupId>
			<artifactId>order-service-sdk</artifactId>
			<version>1.1.0-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>com.dili</groupId>
			<artifactId>orders-common</artifactId>
			<version>${project.parent.version}</version>
		</dependency>
		<dependency>
			<groupId>com.dili</groupId>
			<artifactId>logger-sdk</artifactId>
			<version>0.0.2-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>com.dili</groupId>
			<artifactId>feign-session-spring-boot-starter</artifactId>
			<version>1.1-SNAPSHOT</version>
		</dependency>
		<!-- gson工具类 -->
		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
		</dependency>
		<!-- 幂等验证 -->
		<dependency>
			<groupId>com.dili</groupId>
			<artifactId>ss-idempotent</artifactId>
			<version>${sharp-sword.version}</version>
		</dependency>
		<!-- spring boot 基类 -->
		<dependency>
			<groupId>com.dili</groupId>
			<artifactId>ss-beetl</artifactId>
			<version>3.6.8-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>com.dili</groupId>
			<artifactId>ss-processor</artifactId>
			<version>${sharp-sword.version}</version>
			<exclusions>
				<exclusion>
					<groupId>com.sun</groupId>
					<artifactId>tools</artifactId>
				</exclusion>
				<exclusion>
					<groupId>tk.mybatis</groupId>
					<artifactId>mapper-spring-boot-starter</artifactId>
				</exclusion>
				<exclusion>
					<groupId>com.github.pagehelper</groupId>
					<artifactId>pagehelper-spring-boot-starter</artifactId>
				</exclusion>
				<exclusion>
					<groupId>com.alibaba</groupId>
					<artifactId>druid-spring-boot-starter</artifactId>
				</exclusion>
				<exclusion>
					<groupId>mysql</groupId>
					<artifactId>mysql-connector-java</artifactId>
				</exclusion>
				<exclusion>
					<groupId>com.alibaba</groupId>
					<artifactId>druid</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<!-- if you enable json support in spring mvc. -->
		<dependency>
			<groupId>org.codehaus.jackson</groupId>
			<artifactId>jackson-mapper-asl</artifactId>
			<version>1.9.13</version>
		</dependency>

		<!-- =============== spring cloud starters =============== -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>com.alibaba.cloud</groupId>
			<artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
			<version>2.2.3.RELEASE</version>
			<exclusions>
				<exclusion>
					<groupId>com.alibaba</groupId>
					<artifactId>fastjson</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>com.alibaba.cloud</groupId>
			<artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
			<version>2.2.3.RELEASE</version>
		</dependency>

		<dependency>
			<groupId>org.springframework.cloud</groupId>
			<artifactId>spring-cloud-starter-openfeign</artifactId>
			<version>2.2.5.RELEASE</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.springframework/springloaded -->
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>springloaded</artifactId>
			<version>${springloaded.version}</version>
		</dependency>
		<!-- 内部包 -->
		<dependency>
			<groupId>com.dili</groupId>
			<artifactId>commons-web</artifactId>
			<version>1.3.4-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>com.dili</groupId>
			<artifactId>commons-server</artifactId>
			<version>1.3.4-SNAPSHOT</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>1.18.12</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>com.dili</groupId>
			<artifactId>uap-sdk</artifactId>
			<version>2.10.0-SNAPSHOT</version>
			<exclusions>
				<exclusion>
					<groupId>tk.mybatis</groupId>
					<artifactId>mapper-spring-boot-starter</artifactId>
				</exclusion>
				<exclusion>
					<groupId>com.github.pagehelper</groupId>
					<artifactId>pagehelper-spring-boot-starter</artifactId>
				</exclusion>
				<exclusion>
					<groupId>com.alibaba</groupId>
					<artifactId>druid-spring-boot-starter</artifactId>
				</exclusion>
				<exclusion>
					<groupId>mysql</groupId>
					<artifactId>mysql-connector-java</artifactId>
				</exclusion>
				<exclusion>
					<groupId>com.alibaba</groupId>
					<artifactId>druid</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>cn.hutool</groupId>
			<artifactId>hutool-all</artifactId>
			<version>5.3.10</version>
		</dependency>
		<dependency>
			<groupId>com.diligrp</groupId>
			<artifactId>message-sdk</artifactId>
			<version>1.2.0-SNAPSHOT</version>
		</dependency>

	</dependencies>


</project>